Reduces font size in nav, fixes spacing in footer.

--- a/assets/style.css
+++ b/assets/style.css
@@ -86,7 +86,7 @@ header {
 .menu-item a i {
   padding-top: 2rem;
   display: block;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   text-shadow: 2px 2px 2px black;
 }
 
@@ -139,6 +139,7 @@ footer {
 
 .download-button {
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .cv-pdf {
